--- a/.github/workflows/train.yml
+++ b/.github/workflows/train.yml
@@ -47,9 +47,10 @@ jobs:
         python-version: "3.10"
 
     - name: Install dependencies
-      run: pip install -r requirements.txt
+      run: pip install -r lab2/requirements.txt
 
     - name: Run training script
+      working-directory: lab2
       env:
         EXPERIMENT_NAME: ${{ matrix.experiment_name }}
         MODEL_TYPE: ${{ matrix.model_type }}
@@ -63,5 +64,5 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: artifacts-${{ matrix.experiment_name }}
-        path: outputs/
+        path: lab2/outputs/
         retention-days: 30
