--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -14,33 +14,6 @@ env:
 jobs:
   train:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        include:
-          - experiment_name: "Experiment 1"
-            model_type: "random_forest"
-            n_estimators: "50"
-            max_depth: "10"
-            test_size: "0.2"
-            alpha: "1.0"
-          - experiment_name: "Experiment 2"
-            model_type: "ridge"
-            n_estimators: "100"
-            max_depth: "15"
-            test_size: "0.3"
-            alpha: "1.0"
-          - experiment_name: "Experiment 3"
-            model_type: "random_forest"
-            n_estimators: "100"
-            max_depth: "15"
-            test_size: "0.3"
-            alpha: "1.0"
-          - experiment_name: "Experiment 4"
-            model_type: "random_forest"
-            n_estimators: "200"
-            max_depth: "20"
-            test_size: "0.3"
-            alpha: "1.0"
 
     steps:
     - name: Checkout repository
@@ -56,20 +29,15 @@ jobs:
 
     - name: Run training script
       working-directory: scripts
-      env:
-        EXPERIMENT_NAME: ${{ matrix.experiment_name }}
-        MODEL_TYPE: ${{ matrix.model_type }}
-        N_ESTIMATORS: ${{ matrix.n_estimators }}
-        MAX_DEPTH: ${{ matrix.max_depth }}
-        TEST_SIZE: ${{ matrix.test_size }}
-        ALPHA: ${{ matrix.alpha }}
       run: python train.py
 
     - name: Upload artifacts
       uses: actions/upload-artifact@v4
       with:
-        name: artifacts-${{ matrix.experiment_name }}
-        path: scripts/outputs/
+        name: model-artifacts
+        path: |
+          scripts/model.pkl
+          scripts/metrics.json
         retention-days: 30
 
   build-and-push:
@@ -86,18 +54,17 @@ jobs:
     - name: Download training artifacts
       uses: actions/download-artifact@v4
       with:
-        pattern: artifacts-*
-        merge-multiple: true
+        name: model-artifacts
         path: artifacts/
 
     - name: Prepare model file
       run: |
         mkdir -p model
-        # Find and copy the best model from artifacts
-        if [ -f "artifacts/scripts/outputs/model_experiment_1.pkl" ]; then
-          cp artifacts/scripts/outputs/model_experiment_1.pkl model/model.pkl
-        elif [ -f "scripts/outputs/model_experiment_1.pkl" ]; then
-          cp scripts/outputs/model_experiment_1.pkl model/model.pkl
+        # Copy model from artifacts
+        if [ -f "artifacts/scripts/model.pkl" ]; then
+          cp artifacts/scripts/model.pkl model/model.pkl
+        elif [ -f "scripts/model.pkl" ]; then
+          cp scripts/model.pkl model/model.pkl
         elif [ -f "model/model.pkl" ]; then
           echo "Model file already exists"
         else
